--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -5,6 +5,10 @@ django-redis-sessions==0.5.0
 djangorestframework==3.10.0
 python-memcached==1.57
 redis==2.10.6
+newrelic==4.20.1.121
+raven==6.10.0
+whitenoise==4.1.3
+gunicorn==19.9.0
 
 # Must match Bergenia infra
 psycopg2==2.7.4
