--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -1,6 +1,7 @@
 -e ./src/harrastuspassi
 
 django==2.2
+django-filter==2.2.0
 django-redis-sessions==0.5.0
 djangorestframework==3.10.0
 python-memcached==1.57
