--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -10,6 +10,7 @@ raven==6.10.0
 whitenoise==4.1.3
 gunicorn==19.9.0
 django-mptt==0.10.0
+uritemplate==3.0.0
 
 # Must match Bergenia infra
 psycopg2==2.7.4
