--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ before_script:
   - ssh-add <(echo "$SSH_PRIVATE_KEY")
   - python3 -m venv ../venv
   - source ../venv/bin/activate
+  - pip3 install wheel
 
 services:
   - name: mdillon/postgis:10
