--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -2,7 +2,7 @@
 
 django==2.2
 django-redis-sessions==0.5.0
-djangorestframework==3.10.0
+djangorestframework==3.10.2
 python-memcached==1.57
 redis==2.10.6
 newrelic==4.20.1.121
@@ -10,7 +10,7 @@ raven==6.10.0
 whitenoise==4.1.3
 gunicorn==19.9.0
 django-mptt==0.10.0
-uritemplate==3.0.0
+coreapi==2.3.3
 
 # Must match Bergenia infra
 psycopg2==2.7.4
