--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 dodgy==0.1.9
+flake8==3.7.8
 importlib-metadata==0.18
 isort==4.3.21
 lazy-object-proxy==1.4.1
@@ -16,9 +17,9 @@ pkg-resources==0.0.0
 pluggy==0.12.0
 prospector==1.1.6.4
 py==1.8.0
-pycodestyle==2.4.0
+pycodestyle==2.5.0
 pydocstyle==4.0.0
-pyflakes==1.6.0
+pyflakes==2.1.1
 pylint-celery==0.3
 pylint-django==2.0.9
 pylint-flask==0.6
