--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 image: docker.haltu.net/haltu/env/bergenia:latest
 
 before_script:
-  - cp local_settings.py.tpl project/local_settings.py
+  - cp local_settings.py.tpl local_settings.py
   - eval $(ssh-agent -s)
   - ssh-add <(echo "$SSH_PRIVATE_KEY")
   - python3 -m venv ../venv
@@ -16,7 +16,7 @@ services:
   - redis:4.0.9
 
 variables:
-  DJANGO_SETTINGS_MODULE: project.local_settings
+  DJANGO_SETTINGS_MODULE: local_settings
   POSTGRES_DB: bergenia
   POSTGRES_PASSWORD: bergenia
   POSTGRES_USER: bergenia
@@ -30,7 +30,7 @@ build_devel:
   stage: build
   script:
     - pwd
-    - cat project/local_settings.py
+    - cat local_settings.py
     - pip3 install -r requirements.txt
     - python3 manage.py help
 
@@ -38,7 +38,7 @@ build_prod:
   stage: build
   script:
     - pwd
-    - cat project/local_settings.py
+    - cat local_settings.py
     - pip3 install -r requirements_prod.txt
     - python3 manage.py help
 
