Move pyyaml dependency to requirements_prod.txt
Dependencies required by the production system should reside in
requirements_prod.txt. Only development dependencies are in
requirements.txt.

--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -10,6 +10,7 @@ redis==2.10.6
 django==2.2
 gunicorn==19.9.0
 newrelic==4.20.1.121
+PyYAML==5.1.1
 python-memcached==1.57
 raven==6.10.0
 redis==2.10.6
