--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==19.1.0
 codecov==2.0.15
 dodgy==0.1.9
 flake8==3.7.8
+freezegun==0.3.12
 importlib-metadata==0.18
 isort==4.3.21
 lazy-object-proxy==1.4.1
