--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
+codecov==2.0.15
 dodgy==0.1.9
 flake8==3.7.8
 importlib-metadata==0.18
@@ -13,7 +14,6 @@ more-itertools==7.1.0
 packaging==19.0
 pathlib2==2.3.4
 pep8-naming==0.4.1
-pkg-resources==0.0.0
 pluggy==0.12.0
 prospector==1.1.6.4
 py==1.8.0
@@ -26,6 +26,7 @@ pylint-flask==0.6
 pylint-plugin-utils==0.5
 pylint==2.3.1
 pyparsing==2.4.0
+pytest-cov==2.7.1
 pytest-django==3.5.1
 pytest==5.0.1
 pytz==2019.1
