--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 codecov==2.0.15
+django-cors-headers==3.1.0
 dodgy==0.1.9
 flake8==3.7.8
 freezegun==0.3.12
