--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -18,6 +18,7 @@ python-memcached==1.57
 raven==6.10.0
 redis==2.10.6
 whitenoise==4.1.3
+djangorestframework-gis==0.14
 
 # Must match Bergenia infra
 Pillow==6.1.0
