--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -2,6 +2,7 @@
 
 coreapi==2.3.3
 django-filter==2.2.0
+django-guardian==2.1.0
 django-health-check==3.10.2
 django-mptt==0.10.0
 django-redis-sessions==0.5.0
