--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -19,6 +19,7 @@ raven==6.10.0
 redis==2.10.6
 whitenoise==4.1.3
 djangorestframework-gis==0.14
+django-extra-fields==2.0.1
 
 # Must match Bergenia infra
 Pillow==6.1.0
