--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -6,6 +6,7 @@ django-extra-fields==2.0.1
 django-filter==2.2.0
 django-guardian==2.1.0
 django-health-check==3.10.2
+django-modeltranslation==0.15
 django-mptt==0.10.0
 django-redis-sessions==0.5.0
 djangorestframework==3.10.2
