--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ atomicwrites==1.3.0
 attrs==19.1.0
 codecov==2.0.15
 django-cors-headers==3.1.0
+django-debug-toolbar==2.2
+django-extensions==2.2.9
 dodgy==0.1.9
 flake8==3.7.8
 freezegun==0.3.12
@@ -40,5 +42,6 @@ snowballstemmer==1.9.0
 sqlparse==0.3.0
 typed-ast==1.4.0
 wcwidth==0.1.7
+Werkzeug==1.0.1
 wrapt==1.11.2
 zipp==0.5.2
