--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pyparsing==2.4.0
 pytest-cov==2.7.1
 pytest-django==3.5.1
 pytest==5.0.1
+pytest-mock==3.2.0
 pytz==2019.1
 requirements-detector==0.6
 setoptconf==0.2.0
