--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-cors-headers==3.1.0
 django-debug-toolbar==2.2
 django-extensions==2.2.9
 dodgy==0.1.9
+flake8-polyfill==1.0.2
 flake8==3.7.8
 freezegun==0.3.12
 importlib-metadata==0.18
